--- a/src/RaccoonDocumentation.IntegrationTests/RaccoonDocumentation.IntegrationTests.csproj
+++ b/src/RaccoonDocumentation.IntegrationTests/RaccoonDocumentation.IntegrationTests.csproj
@@ -38,9 +38,22 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.8.0.1545\lib\xunit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\Services\MenuServiceTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RaccoonDocumentation.Web\RaccoonDocumentation.Web.csproj">
+      <Project>{284BF839-E5AF-4290-A5B7-89B928D2F5F6}</Project>
+      <Name>RaccoonDocumentation.Web</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
