--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\RaccoonDocumentation\packages.config" />
   <repository path="..\RaccoonDocumentation.Web\packages.config" />
+  <repository path="..\RaccoonDocumentation.IntegrationTests\packages.config" />
 </repositories>
