--- a/src/RaccoonDocumentation.Web/RaccoonDocumentation.Web.csproj
+++ b/src/RaccoonDocumentation.Web/RaccoonDocumentation.Web.csproj
@@ -59,13 +59,15 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\Routes\LowercaseRoute.cs" />
+    <Compile Include="Helpers\Routes\RouteCollectionExtension.cs" />
     <Compile Include="Controllers\DocumentationController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\MenuItem.cs" />
+    <Compile Include="RouteConfigurator.asax.cs" />
     <Compile Include="Services\MenuService.cs" />
     <Compile Include="ViewModels\DocumentationPageViewModel.cs" />
   </ItemGroup>
@@ -97,8 +99,6 @@
     <Content Include="scripts\MicrosoftMvcValidation.js" />
     <Content Include="scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
