--- a/src/RaccoonDocumentation.IntegrationTests/packages.config
+++ b/src/RaccoonDocumentation.IntegrationTests/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="xunit" version="1.8.0.1545" />
+  <package id="RhinoMocks" version="3.6" />
+  <package id="MvcContrib.Mvc3.TestHelper-ci" version="3.0.68.0" />
 </packages>
