--- a/src/RaccoonDocumentation.Web/RaccoonDocumentation.Web.csproj
+++ b/src/RaccoonDocumentation.Web/RaccoonDocumentation.Web.csproj
@@ -67,7 +67,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\MenuItem.cs" />
-    <Compile Include="RouteConfigurator.asax.cs" />
+    <Compile Include="RouteConfigurator.cs" />
     <Compile Include="Services\MenuService.cs" />
     <Compile Include="ViewModels\DocumentationPageViewModel.cs" />
   </ItemGroup>
