--- a/src/RaccoonDocumentation.Web/RaccoonDocumentation.Web.csproj
+++ b/src/RaccoonDocumentation.Web/RaccoonDocumentation.Web.csproj
@@ -65,9 +65,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DocumentationItem.cs" />
+    <Compile Include="Models\DocumentationItemResolved.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\MenuItem.cs" />
     <Compile Include="RouteConfigurator.cs" />
+    <Compile Include="Services\DocumentationItemResolver.cs" />
+    <Compile Include="Services\DocumentationResolver.cs" />
     <Compile Include="Services\MenuService.cs" />
     <Compile Include="ViewModels\DocumentationPageViewModel.cs" />
   </ItemGroup>
