--- a/src/RaccoonDocumentation.Web/RaccoonDocumentation.Web.csproj
+++ b/src/RaccoonDocumentation.Web/RaccoonDocumentation.Web.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\MenuItem.cs" />
     <Compile Include="RouteConfigurator.cs" />
-    <Compile Include="Services\DocumentationItemResolver.cs" />
+    <Compile Include="Services\DocumentationLocator.cs" />
     <Compile Include="Services\DocumentationResolver.cs" />
     <Compile Include="Services\MenuService.cs" />
     <Compile Include="ViewModels\DocumentationPageViewModel.cs" />
