--- a/src/RaccoonDocumentation.IntegrationTests/RaccoonDocumentation.IntegrationTests.csproj
+++ b/src/RaccoonDocumentation.IntegrationTests/RaccoonDocumentation.IntegrationTests.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\packages\AutoMapper.1.1.0.118\lib\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="MvcContrib.TestHelper">
       <HintPath>..\packages\MvcContrib.Mvc3.TestHelper-ci.3.0.68.0\lib\MvcContrib.TestHelper.dll</HintPath>
     </Reference>
@@ -52,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\Infrastructure\AutoMapper\AutoMapperConfigurationTester.cs" />
     <Compile Include="Web\RouteConfiguratorTests.cs" />
     <Compile Include="Web\Services\MenuServiceTests.cs" />
   </ItemGroup>
