--- a/src/RaccoonDocumentation.Web/packages.config
+++ b/src/RaccoonDocumentation.Web/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Modernizr" version="1.7" />
   <package id="jQuery" version="1.6.1" />
+  <package id="AutoMapper" version="1.1.0.118" />
+  <package id="MarkdownSharp" version="1.13.0.0" />
 </packages>
